ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration14/input.ts.stderr
error: A `set` accessor must have a corresponding `get` accessor
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration14/input.ts:3:4
  |
3 |    set Foo(a: number, b: number) { }
  |    ^^^

